# ThetaCGL

./: .gitignore  README.md  cgl.py  computing_roots.py  dim1.py  dim2.py  dim3.py  example.py  example_rust.py  exemple.py  utilities.py
old_files/: computing_roots.py  dim3.py
theta-cgl-rust/: Cargo.toml  README.md  gen_fp.sage
theta-cgl-rust/benches/: fpcore.rs  p127.rs  p127_new.rs  p127_old.rs  p254.rs  p921.rs  roots.rs  th127.rs  th127_new.rs  th127_old.rs  th254.rs  th5248.rs  th64.rs  th921.rs  util.rs
theta-cgl-rust/src/: dimension_one.rs  dimension_three.rs  dimension_two.rs  fields.rs  fpcore.rs  lib.rs  main.rs  params.rs  test_utils.rs  util.rs
theta-cgl-rust/src/finitefield/: fp21_gen.rs  fp2_64_gen.rs  fp2_gen.rs  fp_gen.rs  gf255_m64.rs  gf5_248_m64.rs  gf64_257.rs  gf_127_m64.rs  gf_257_64.rs  gfp5.rs  lagrange.rs  mod.rs  utils64.rs
theta_cgl_py/: dim3.py
theta_cgl_rust/: Cargo.toml
theta_cgl_rust/benches/: p5248.rs  p64.rs  th5248.rs
theta_cgl_rust/src/: fields.rs
verifications/: Proposition12.py  Proposition13.sage  Proposition14.py  Proposition20.sage  Theorem8.sage
