[package]
name = "theta-cgl-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
hex = "0.4.3"
num-bigint = "0.4.3"
sha2 = "0.10.2"
sha3 = "0.10.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# [[bench]]
# name = "roots"
# path = "benches/roots.rs"
# harness = false

# [[bench]]
# name = "p127_old"
# path = "benches/p127_old.rs"
# harness = false

# [[bench]]
# name = "p127"
# path = "benches/p127.rs"
# harness = false

# [[bench]]
# name = "p254"
# path = "benches/p254.rs"
# harness = false

# [[bench]]
# name = "p921"
# path = "benches/p921.rs"
# harness = false

[[bench]]
name = "th127"
path = "benches/th127.rs"
harness = false

[[bench]]
name = "th127_old"
path = "benches/th127_old.rs"
harness = false

[[bench]]
name = "th254"
path = "benches/th254.rs"
harness = false

[[bench]]
name = "th921"
path = "benches/th921.rs"
harness = false

[[bench]]
name = "th5248"
path = "benches/th5248.rs"
harness = false

[[bench]]
name = "th64"
path = "benches/th64.rs"
harness = false
